<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="game_mode1">Free Play</string>
    <string name="game_mode2">Tournament</string>
    <string name="p1_turn">Player 1\'s turn</string>
    <string name="p2_turn">Player 2\'s turn</string>
    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="p1_stat">0</string>
    <string name="p2_stat">0</string>
    <string name="reset">Reset</string>
    <string name="colon">:</string>
    <string name="heading">Welcome to Tic-Tac-Toe</string>
</resources>